# OpenMDT

./: .dockerignore  .gitignore  Dockerfile  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml  readme.MD  requirements.txt
.github/workflows/: django.yml
DjangoPolls/: api.py  asgi.py  factories.py  s3.py  settings.py  urls.py  wsgi.py
OpenMDT/: api.py  asgi.py  settings.py  wsgi.py
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_badge_number_alter_user_rank.py  0003_alter_user_badge_number.py  0004_rank_icon.py  0005_alter_rank_icon.py
alerts/: models.py
common/: admin.py  context_processors.py  models.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_announcement.py  0002_genericfile.py  0002_tag_icon.py  0003_notification.py  0004_notification_type_alter_notification_body.py  0005_alter_notification_type.py
legislations/: admin.py  api.py  apps.py  factories.py  forms.py  models.py  views.py
legislations/migrations/: 0001_initial.py  0002_legislation_points_alter_legislation_fine_and_more.py  0002_legislation_type.py  (+2 more)
notifications/: models.py
portal/: models.py  urls.py  views.py
profiles/: admin.py  api.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
reports/: admin.py  api.py  apps.py  factories.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
static/: base.css  base.js  custom_bootstrap.css  sidebars.css
templates/: base.html  base_old.html  home.html  modal.html  navbar.html  navbar_vert.html  notification.html
(+69 files in other folders)
